[project]
name = "sushi-grid"
version = "0.0.3"
description = "CLI tool for make sushi samples grid automatically"
authors = [{ name = "JoMingyu" }]
requires-python = ">= 3.9,< 4.0"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.3,<9",
    "Pillow>=9.3.0,<10",
]

[project.urls]
Repository = "https://github.com/JoMingyu/sushi-grid"

[project.scripts]
grid = "app:cli.handler"

[dependency-groups]
dev = ["black>=22.12.0,<23"]

[tool.hatch.build.targets.sdist]
include = ["app"]

[tool.hatch.build.targets.wheel]
include = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
